# pyproject.toml
[build-system]
requires = [
    "setuptools>=64.0",
    "wheel",
    "Cython>=0.29.35",
    "numpy",
    "pysam",
]
build-backend = "setuptools.build_meta"

[project]
name = "cgat"
version = "0.7.4.1"
description = "cgat : the Computational Genomics Analysis Toolkit"
authors = [
    {name = "Andreas Heger", email = "andreas.heger@gmail.com"},
]
license = { text = "MIT" }
keywords = ["computational genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
readme = "README.md"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["cgat", "cgat.*"]
include-package-data = true

[tool.setuptools.package-dir]
cgat = "cgat"

[tool.setuptools.entry-points]
console_scripts = [
    "cgat = cgat.cgat:main",
]