# pyproject.toml
[build-system]
requires = [
    "setuptools>=64.0",
    "wheel",
    "Cython>=0.29.35",
    "numpy",
    "pysam",
]
build-backend = "setuptools.build_meta"

[project]
name = "cgat"
version = "0.7.5"
description = "cgat : the Computational Genomics Analysis Toolkit"
authors = [
    {name = "Adam Cribbs", email = "adam.cribbs@ndorms.ox.ac.uk"},
]
license = { text = "MIT" }
keywords = ["computational genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = { find = { where = ["cgat"] } }
include-package-data = true

[project.scripts]
cgat = "cgat.cgat:main"

[tool.setuptools.package-data]
cgat = ["*.txt", "*.yaml", "*.yml"]

[project.urls]
Source = "https://github.com/cgat-developers/cgat-apps/"
Bug_Tracker = "https://github.com/cgat-developers/cgat-apps/issues/"
Documentation = "https://cgat-developers.github.io/cgat-core/"
