[build-system]
requires = [
    "setuptools>=64.0",
    "wheel",
    "Cython>=0.29.35",
    "numpy",
    "pysam",
]
build-backend = "setuptools.build_meta"

[project]
name = "cgat"
version = "0.7.7"
description = "Computational Genomics Analysis Toolkit"
authors = [
    { name = "Adam Cribbs", email = "adam.cribbs@ndorms.ox.ac.uk" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
keywords = ["computational genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "Cython>=0.29.35",
    "numpy",
    "pysam",
]

[tool.setuptools]
packages = { find = { where = ["cgat"] } }
include-package-data = true

[tool.setuptools.package-data]
cgat = ["*.txt", "*.yaml", "*.yml", "*.h"]

[project.scripts]
cgat = "cgat.cgat:main"

[project.urls]
Source = "https://github.com/cgat-developers/cgat-apps/"
Bug_Tracker = "https://github.com/cgat-developers/cgat-apps/issues/"
Documentation = "https://cgat-developers.github.io/cgat-core/"
